force-app/main/default/objects/Floor_Details__c/Floor_Details__c.object-meta.xml
<CustomObject>
    <label>Floor Details</label>
    <nameField>
        <label>Floor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Floor Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>