force-app/main/default/objects/Floor_Details__c/fields/Area_In_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Area_In_Sqft__c</fullName>
    <label>Area In Sqft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>