force-app/main/default/objects/Floor_Details__c/fields/Breadth__c.field-meta.xml
<CustomField>
    <fullName>Breadth__c</fullName>
    <label>Breadth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>