force-app/main/default/objects/Floor_Details__c/fields/Construction_Date__c.field-meta.xml
<CustomField>
    <fullName>Construction_Date__c</fullName>
    <label>Construction Date</label>
    <type>Date</type>
</CustomField>