force-app/main/default/objects/Floor_Details__c/fields/Effective_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_From_Date__c</fullName>
    <label>Effective From Date</label>
    <type>Date</type>
</CustomField>