force-app/main/default/objects/Floor_Details__c/fields/Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Occupancy__c</fullName>
    <label>Occupancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>