force-app/main/default/objects/Floor_Details__c/fields/Property_Details__c.field-meta.xml
<CustomField>
    <fullName>Property_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Details</label>
    <referenceTo>Property_Details__c</referenceTo>
    <relationshipLabel>Floor Details</relationshipLabel>
    <relationshipName>Floor_Details</relationshipName>
    <type>Lookup</type>
</CustomField>